@@ -1239,6 +1239,11 @@ void Lua_Client::SendMarqueeMessage(uint32 type, uint32 priority, uint32 fade_in
 	self->SendMarqueeMessage(type, priority, fade_in, fade_out, duration, msg);
 }
 
+void Lua_Client::SendColoredText(uint32 type, std::string msg) {
+	Lua_Safe_Call_Void();
+	self->SendColoredText(type, msg);
+}
+
 void Lua_Client::PlayMP3(std::string file)
 {
 	Lua_Safe_Call_Void();
@@ -1492,6 +1497,7 @@ luabind::scope lua_register_client() {
 		.def("SetThirst", (void(Lua_Client::*)(int))&Lua_Client::SetThirst)
 		.def("SetConsumption", (void(Lua_Client::*)(int, int))&Lua_Client::SetConsumption)
 		.def("SendMarqueeMessage", (void(Lua_Client::*)(uint32, uint32, uint32, uint32, uint32, std::string))&Lua_Client::SendMarqueeMessage)
+		.def("SendColoredText", (void(Lua_Client::*)(uint32, std::string))&Lua_Client::SendColoredText)
 		.def("PlayMP3", (void(Lua_Client::*)(std::string))&Lua_Client::PlayMP3);
 }
 
